--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 title:  Prakash
-logo: assets/kaggle_to_powerbi.gif
+logo: Docs/—Pngtree—concept banking logo_4017935.png
 show_downloads: True
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
